--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ h1 {
     gap: 10px;
 }
 
-.tips {
+.tips, .footnotes {
     color: var(--muted-text-color);
     margin: 20px auto;
     margin-bottom: 0;
@@ -107,7 +107,7 @@ h1 {
     background-color: #1e293b;
 }
 
-.tips li {
+.tips li, .footnotes li {
     margin-bottom: 10px;
 }
 
@@ -387,7 +387,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    justify-content: center;
+    justify-content: space-around;
     margin: 20px 20px 40px 20px;
     background-color: var(--card-color);
     border-radius: 8px;
